# nvflex

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install.sh  nvflux.c
docs/: INSTALLATION.md  SECURITY.md
examples/: profile-switcher.sh  rofi-launcher.sh
include/: nvflux.h
man/: nvflux.1
scripts/: check-deps.sh  install.sh  uninstall.sh
src/: main.c  nvflux.c
tests/: test_nvflux.c
